# khan-dl

./: .gitignore  LICENSE  README.md  interactive_prompt.py  khan-dl.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
khan-dl/: __init__.py  interactive_prompt.py
khan_dl/: __init__.py  __main__.py  __version__.py  cli.py  interactive_prompt.py  khan_dl.py  khan_downloader.py  test_khan_dl.py  topic_matcher.py
test/: test_khan_dl.py
